# SDL-2-set-up

./: CMakeLists.txt  README.md  build.bat
src/: main.cpp
